# ModBot

./: CMakeLists.txt  README.md  Robor.sdf  package.xml
Robor/: CMakeLists.txt  package.xml
Robor/config/: diff.yaml  joint_names_Robor.yaml
Robor/launch/: display.launch  gazebo.launch
Robor/meshes/: Castor Wheel.STL  Left Wheel.STL  Right Wheel.STL
Robor/urdf/: Robor.csv  Robor.urdf
config/: joint_names_Robor.yaml
include/modbot/: motorpublisher.h
launch/: gazebo.launch  gazebo_without.launch  hector_map.launch  modbot.launch  rviz.launch  teleop.launch  turtlebot3_gmapping.launch
meshes/: Castor Frame.STL  Castor Wheel.STL  Chassis.STL  Left Wheel.STL  Lidar.STL  Right Wheel.STL
meshes/meshes/: Caster Frame.STL  Caster Wheel.STL  Right Wheel.STL
meshes/meshes_without/: Chassis.STL  Lidar.STL
rviz/: modbot.rviz
scripts/: modbot_teleop_key
src/: main.cpp  motorpublisher.cpp
urdf/: Robor.csv  Robor.sdf  Robor.urdf  lidar.urdf  lidar.urdf.xacro  modbot.csv  modbot.urdf  modbot_without.csv  modbot_without.urdf
world/: modbot.world  modbot2.world  warehouse-sim.world
